--- a/themes/hexo-theme-matery/layout/_partial/footer.ejs
+++ b/themes/hexo-theme-matery/layout/_partial/footer.ejs
@@ -23,18 +23,18 @@
             <% if (theme.busuanziStatistics && theme.busuanziStatistics.enable) { %>
             <% socialClass = 'social-statis' %>
             <% } %> -->
-            <!-- <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalTraffic) { %> -->
-            <span id="busuanzi_container_site_pv">
-                |&nbsp;<i class="far fa-eye"></i>&nbsp;总访问量:&nbsp;<span id="busuanzi_value_site_pv"
-                    class="white-color"></span>&nbsp;次
-            </span>
-            <!-- <% } %> -->
-            <!-- <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalNumberOfvisitors) { %> -->
-            <span id="busuanzi_container_site_uv">
-                |&nbsp;<i class="fas fa-users"></i>&nbsp;总访问人数:&nbsp;<span id="busuanzi_value_site_uv"
-                    class="white-color"></span>&nbsp;人
-            </span>
-            <!-- <% } %> -->
+            <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalTraffic) { %>
+                <span id="busuanzi_container_site_pv-1">
+                    |&nbsp;<i class="far fa-eye"></i>&nbsp;总访问量:&nbsp;<span id="busuanzi_value_site_pv"
+                        class="white-color"></span>&nbsp;次
+                </span>
+            <% } %>
+            <% if (theme.busuanziStatistics && theme.busuanziStatistics.totalNumberOfvisitors) { %>
+                <span id="busuanzi_container_site_uv-1">
+                    |&nbsp;<i class="fas fa-users"></i>&nbsp;总访问人数:&nbsp;<span id="busuanzi_value_site_uv"
+                        class="white-color"></span>&nbsp;人
+                </span>
+            <% } %>
             <br>
             <% if (theme.time.enable) { %>
             <span id="sitetime">载入运行时间...</span>
