--- a/themes/hexo-theme-matery/source/css/my.css
+++ b/themes/hexo-theme-matery/source/css/my.css
@@ -1,1 +1,34 @@
 /* Here is your custom css styles. */
+blockquote[id*="fn_"]{
+
+    font-size: 20px;
+    box-sizing: inherit;
+
+
+    border-color: rgba(255, 255, 255, .1);
+    width: 100%;
+    border: none;
+    padding: none;
+
+    padding-top: 0px;
+    padding-left: -10px;
+    padding-right: -10px;
+    
+    counter-reset: none;
+
+    margin: 28px 0 8px -4px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: 1.2rem;
+
+    height: 100px;
+    display: block;
+
+    /* margin-block-start: 1.67em;
+    margin-block-end: 1.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold; */
+    margin-top: 100px;
+}
+
